test/syc/good/funcall.c
/*
 * Call function without arguments or return value
 */

void fun(void)
{
	return;
}

int call_fun(void)
{
	fun();
}
