test/syc/bad/breaknols.c
/*
 * Break without enclosing loop or switch statement
 */

int main(void)
{
	break;
	return 0;
}
